fixed icon not showing in original layout

--- a/browser/render/layouts/original/snippet-item/snippet-item.sass
+++ b/browser/render/layouts/original/snippet-item/snippet-item.sass
@@ -21,7 +21,9 @@
       width: 50%
       text-overflow: ellipsis
       .lang-icon
-        height: 20px
+        display: inline-block
+        height: 30px
+        width: 30px
       input[type='text']
         width: 100%
         height: 30px
